; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/extr_bnx2.c_bnx2_reg_wr_ind.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/extr_bnx2.c_bnx2_reg_wr_ind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnx2 = type { i32 }

@BNX2_PCICFG_REG_WINDOW_ADDRESS = common dso_local global i32 0, align 4
@BNX2_PCICFG_REG_WINDOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bnx2*, i32, i32)* @bnx2_reg_wr_ind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bnx2_reg_wr_ind(%struct.bnx2* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.bnx2*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.bnx2* %0, %struct.bnx2** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.bnx2*, %struct.bnx2** %4, align 8
  %9 = getelementptr inbounds %struct.bnx2, %struct.bnx2* %8, i32 0, i32 0
  %10 = load i64, i64* %7, align 8
  %11 = call i32 @spin_lock_irqsave(i32* %9, i64 %10)
  %12 = load %struct.bnx2*, %struct.bnx2** %4, align 8
  %13 = load i32, i32* @BNX2_PCICFG_REG_WINDOW_ADDRESS, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @BNX2_WR(%struct.bnx2* %12, i32 %13, i32 %14)
  %16 = load %struct.bnx2*, %struct.bnx2** %4, align 8
  %17 = load i32, i32* @BNX2_PCICFG_REG_WINDOW, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @BNX2_WR(%struct.bnx2* %16, i32 %17, i32 %18)
  %20 = load %struct.bnx2*, %struct.bnx2** %4, align 8
  %21 = getelementptr inbounds %struct.bnx2, %struct.bnx2* %20, i32 0, i32 0
  %22 = load i64, i64* %7, align 8
  %23 = call i32 @spin_unlock_irqrestore(i32* %21, i64 %22)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @BNX2_WR(%struct.bnx2*, i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
